syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "proto/common/common.proto";

option csharp_namespace = "EmpowerIdMicroservice.WebApi.Proto";

package proto.package;

service PostGrpc { 
	rpc CreatePost(PostCreateMessage) returns (IdResponseMessage);
	rpc UpdatePost(PostUpdateMessage) returns (IdResponseMessage); 
	rpc GetPostById(IdRequestMessage) returns (PostResponseMessage);  
	rpc GetPosts(PaginationRequestMessage) returns (PostListResponseMessage);  
}

message PostCreateMessage {
    google.protobuf.StringValue title = 1;
    google.protobuf.StringValue content = 2;
    google.protobuf.StringValue author = 3;
    bool isPublished = 4;
}
 
message PostUpdateMessage {
    google.protobuf.Int32Value postId = 1; 
    google.protobuf.StringValue title = 2;
    google.protobuf.StringValue content = 3;
    google.protobuf.StringValue author = 4;
    bool isPublished = 5;
}

message PostResponseMessage {
    google.protobuf.StringValue title = 1;
    google.protobuf.StringValue content = 2;
    google.protobuf.StringValue author = 3;
    bool isPublished = 4;
    repeated CommentMessage comments = 5;
}

message PostListResponseMessage {
    repeated PostResponseMessage posts = 1;
    google.protobuf.Int32Value total = 2; 

}